--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "@material-tailwind/react": "^2.1.10",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -24,7 +25,7 @@
     "eslint-plugin-next-on-pages": "^1.13.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "vercel": "^37.8.0",
+    "vercel": "^32.3.0",
     "wrangler": "^3.80.5"
   }
 }
