--- a/wrangler.toml
+++ b/wrangler.toml
@@ -85,3 +85,7 @@ pages_build_output_dir = ".vercel/output/static"
 # [[env.production.kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
 # id = "<PRODUCTION_NAMESPACE_ID>"
+
+[[kv_namespaces]]
+binding = "livegames-NEXT_CACHE_WORKERS_KV"
+id = "d49e0b602008480b87506385f9901e58"
